app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: marathon
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marathon-app
  namespace: marathon
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: preprod-private
      containers:
      - name: frontend
        image: sathish8329/marathon:1744
        ports:
        - containerPort: 8081  # Ensure the container is exposed on port 8001
---

apiVersion: v1
kind: Service
metadata:
  name: marathon-frontend-service
  namespace: marathon
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80          # External port exposed for the service
      targetPort: 8081   # Matches the container port in the deployment
  type: ClusterIP        # Optional: Depending on your needs, you may choose ClusterIP or LoadBalancer instead
