ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marathon-ingress
  namespace: marathon
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  rules:
  - host: "marathon.kovaion.dev"  # Root domain for frontend service
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: marathon-frontend-service  # Frontend service
            port:
              number: 8081  # The port that the frontend service is exposing
